--- a/app/src/main/res/layout/activity_article_detail1.xml
+++ b/app/src/main/res/layout/activity_article_detail1.xml
@@ -40,4 +40,9 @@
             android:layout_height="match_parent" />
 
     </com.cpoopc.scrollablelayoutlib.ScrollableLayout>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="发表评论"
+        />
 </LinearLayout>
