--- a/app/src/main/res/layout/activity_photo1.xml
+++ b/app/src/main/res/layout/activity_photo1.xml
@@ -9,7 +9,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/colorWhite"
             android:id="@+id/count"
             android:textSize="16sp"
             />
