--- a/app/src/main/res/layout/item_friend_group.xml
+++ b/app/src/main/res/layout/item_friend_group.xml
@@ -3,6 +3,8 @@
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/circle"
+    android:paddingBottom="5dp"
     android:background="@color/colorWhite">
 
     <com.facebook.drawee.view.SimpleDraweeView
@@ -140,6 +142,7 @@
                 android:layout_height="20dp"
                 android:src="@drawable/note_item_more_bg_normal"
                 android:layout_marginRight="10dp"
+                android:id="@+id/more"
                 />
         </LinearLayout>
         <LinearLayout
@@ -224,6 +227,33 @@
                 android:layout_marginLeft="8dp"
                 android:id="@+id/all_comment"
                 android:visibility="gone"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:background="@color/color_transparent_black"
+            android:layout_marginTop="10dp"
+            android:padding="1dp"
+            android:orientation="horizontal"
+            android:id="@+id/send_comment"
+            android:layout_marginRight="2dp"
+            android:layout_height="30dp">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="30dp"
+                android:gravity="center_vertical"
+                android:singleLine="true"
+                android:text="@string/send_comment_"
+                android:background="@color/colorWhite"
+                />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/selector_send_comment"
+                android:background="@color/colorWhite"
                 />
         </LinearLayout>
     </LinearLayout>
