--- a/app/src/main/res/layout/activity_selectimg.xml
+++ b/app/src/main/res/layout/activity_selectimg.xml
@@ -108,8 +108,9 @@
                 android:layout_height="25dp">
                 <TextView
                     android:layout_centerInParent="true"
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:id="@+id/add_location"
+                    android:singleLine="true"
                     android:layout_alignParentLeft="true"
                     android:layout_height="match_parent"
                     android:gravity="center"
