--- a/app/src/main/res/layout/activity_mymain.xml
+++ b/app/src/main/res/layout/activity_mymain.xml
@@ -1,32 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="false">
+    android:orientation="vertical"
+    android:layout_height="match_parent">
+    <include layout="@layout/toolbar_back" />
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/app_bar"
+    <com.cpoopc.scrollablelayoutlib.ScrollableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay"
+        android:layout_height="match_parent"
+        android:id="@+id/scrollableLayout"
+        android:orientation="vertical"
         >
 
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/toolbar_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            app:expandedTitleMarginStart="48dp"
-            app:expandedTitleMarginEnd="64dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
-            <include layout="@layout/my_head" />
-
-            <include layout="@layout/toolbar_backforcollapsing" />
-
-        </android.support.design.widget.CollapsingToolbarLayout>
-
+           <com.ez08.im.ui.view.ParallaxScrollView
+               android:layout_width="match_parent"
+               android:id="@+id/parallaxscrollview"
+               android:layout_height="wrap_content">
+           </com.ez08.im.ui.view.ParallaxScrollView>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
@@ -40,14 +32,11 @@
             >
         </android.support.design.widget.TabLayout>
 
-    </android.support.design.widget.AppBarLayout>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/main_viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+    </com.cpoopc.scrollablelayoutlib.ScrollableLayout >
 
-
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/main_viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
