--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -23,14 +23,14 @@
             android:layout_height="50dp"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/bt_quxiao" />
+            android:background="@drawable/bt_cancle" />
 
         <Button
             android:id="@+id/photo_bt_del"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_centerInParent="true"
-            android:background="@drawable/bt_shanchu" />
+            android:background="@drawable/bt_delete" />
 
         <Button
             android:id="@+id/photo_bt_enter"
@@ -38,7 +38,7 @@
             android:layout_height="50dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/bt_queding" />
+            android:background="@drawable/bt_confim" />
     </RelativeLayout>
 
 </RelativeLayout>
