--- a/app/src/main/res/layout/fragment_friend_baseinfo.xml
+++ b/app/src/main/res/layout/fragment_friend_baseinfo.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollview"
     android:layout_width="match_parent"
+    android:background="@color/colorWhite"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
@@ -8,7 +10,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="3dp" />
-
-    <include layout="@layout/empty_view" />
-
-</RelativeLayout>
+</ScrollView>
