--- a/app/src/main/res/layout/my_head.xml
+++ b/app/src/main/res/layout/my_head.xml
@@ -3,10 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="200dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/mybg"
     android:fitsSystemWindows="true"
     app:layout_collapseMode="parallax"
     xmlns:fresco="http://schemas.android.com/apk/res-auto">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:src="@drawable/mybg"
+        android:id="@+id/backimage"
+        android:scaleType="fitXY"
+        app:layout_collapseMode="parallax"
+        />
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/image"
@@ -73,5 +81,14 @@
         android:layout_marginLeft="10dp"
         />
 
+    <ProgressBar
+        android:layout_width="26dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:id="@+id/loding_bar"
+        android:layout_height="26dp"
+        android:indeterminateDrawable="@anim/progress_anim"
+        />
 
 </RelativeLayout>
