--- a/app/src/main/res/layout/activity_mymain.xml
+++ b/app/src/main/res/layout/activity_mymain.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent">
-    <include layout="@layout/toolbar_back" />
-
     <com.cpoopc.scrollablelayoutlib.ScrollableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -39,4 +37,6 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
     </com.cpoopc.scrollablelayoutlib.ScrollableLayout >
 
-</LinearLayout>
+    <include layout="@layout/toolbar_back"/>
+
+</RelativeLayout>
