--- a/app/src/main/res/layout/fragment_friend_baseinfo.xml
+++ b/app/src/main/res/layout/fragment_friend_baseinfo.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/scrollview"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@color/colorWhite"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
@@ -10,4 +8,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="3dp" />
-</ScrollView>
+
+    <include layout="@layout/empty_view" />
+</RelativeLayout>
